Embedded cassandra, cassandra profile taking out and zookeeper related config file removed